chore: prepare repository for Github release